Added classes in html

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   <div id="app"></div>
   <table id="table" border="1" cellspacing="30" cellpadding="30" width="150" align="center">
     <tr>
-     <td></td>
-     <td></td>
-     <td></td>
+     <td class="r1c1"></td>
+     <td class="r1c2"></td>
+     <td class="r1c3"></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td class="r2c1"></td>
+      <td class="r2c2"></td>
+      <td class="r2c3"></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td class="r3c1"></td>
+      <td class="r3c2"></td>
+      <td class="r3c3"></td>
     </tr>
    </table>
 
